# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
# Distributed under the GPL v2

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh, genkernel:
  Cleanup remaining references to ${ARCH}/ without arch/ prefix

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> +arch/um/busy-config,
  +arch/um/config.sh, +arch/um/kernel-config, +arch/um/modules_load,
  -um/busy-config, -um/config.sh, -um/kernel-config, -um/modules_load:
  Move um/ underneath arch/ where it belongs

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> gen_compile.sh:
  Removed some unused dietlibc code.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
  gen_bootloader.sh, gen_compile.sh, gen_configkernel.sh,
  gen_determineargs.sh, genkernel:
  Removed a large chunk of 2.4 kernel support. This will still require some
  fairly extensive cleaning to completely remove, but I'd say that without a
  shadow of a doubt, genkernel will not function on 2.4 kernels.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel,
  genkernel.8:
  Added a couple more places where I needed to switch INITRD with RAMDISK.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
  arch/alpha/modules_load, arch/ia64/modules_load, arch/mips/modules_load,
  arch/parisc/modules_load, arch/parisc64/modules_load,
  arch/ppc/modules_load, arch/ppc64/modules_load, arch/sparc/modules_load,
  arch/sparc64/modules_load, arch/x86/modules_load,
  arch/x86_64/modules_load, defaults/initrd.scripts, defaults/linuxrc,
  defaults/modules_load, gen_bootloader.sh, gen_cmdline.sh,
  gen_determineargs.sh, gen_initramfs.sh, -gen_initrd.sh, gen_moddeps.sh,
  gen_package.sh, genkernel, genkernel.8:
  Removed all references to an initrd and renamed most initr{d,amfs} stuff
  to simply 'ramdisk' to simplify things for the future.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
  +defaults/initrd.defaults, +defaults/initrd.scripts,