@@ -169,9 +169,7 @@ Linker to use for utilities.
 GNU Make to use for utilities.
 .TP
 \fB\-\-makeopts=\fR<makeopts>
-GNU Make options such as \fB\-j2\fR, etc. \fB\-j\fRX is filtered during the
-module compilation stage of 2.4 series kernels to avoid bottlenecks; the
-2.6 build system does not have this issue and \fB\-j\fRX is not filtered for it.
+GNU Make options such as \fB\-j2\fR, etc.
 .PP
 .BR Initialization
 .TP
