@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
 # Distributed under the GPL v2
 
+  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> gen_bootloader.sh,
+  gen_configkernel.sh, gen_moddeps.sh, genkernel.8:
+  Remove a few more 2.4 kernel support remnants
+
   29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh, genkernel:
   Cleanup remaining references to ${ARCH}/ without arch/ prefix
 
